k8s/app/taskapp-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapp-backend-svc
  namespace: default
spec:
  selector:
    app: taskapp-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
